--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "install": "react-scripts install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
